--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 /session.*
-/tramp
 
 # Auto saves (#[FILE]#)
 /auto-saves
@@ -10,11 +9,19 @@
 # auto-save-list is for interrupted sessions
 /auto-save-list
 
+# savehist
+/history
+
+# recentf
 /recentf
 
+/tramp
+
+# packages
 /elpa
 
 # Customize added by emacs
 /custom.el
 
-/history
+# elpy
+/elpy
